crates/ragna/tests/compile_time_errors/constant.stderr
error[E0308]: mismatched types
 --> tests/compile_time_errors/constant.rs:8:9
  |
8 |         CONSTANT = 20;
  |         ^^^^^^^^^^^^^
  |         |
  |         expected `&mut Gpu<i32, Mut>`, found `&mut Gpu<i32, Const>`
  |         arguments to this function are incorrect
  |
  = note: expected mutable reference `&mut Gpu<i32, Mut>`
             found mutable reference `&mut Gpu<i32, Const>`
note: method defined here
 --> src/values.rs
  |
  |     pub fn assign(&mut self, ctx: &mut GpuContext, value: Gpu<T, impl Any>) {
  |            ^^^^^^
