crates/ragna/tests/compile_time_errors/constant.rs
fn main() {}

#[ragna::gpu]
mod gpu {
    const CONSTANT: i32 = 30;

    fn run() {
        CONSTANT = 20;
    }
}
